# code-page

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  code-page.cabal
.github/workflows/: haskell-ci.yml
include/: windows_cconv.h
src/System/IO/: CodePage.hs
src/System/IO/CodePage/: Internal.hs
src/System/Win32/: CodePage.hs  CodePage.hsc
tests/: Tests.hs
