name:                code-page
version:             0.1
synopsis:			 Windows code page library for Haskell
-- description:
homepage:            https://github.com/RyanGlScott/code-page
bug-reports:         https://github.com/RyanGlScott/code-page/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Provisional
copyright:           (C) 2016 Ryan Scott
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4
                   , GHC == 7.2.2
                   , GHC == 7.4.2
                   , GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
				   , GHC == 8.0.1

source-repository head
  type:                git
  location: 		   https://github.com/RyanGlScott/code-page

library
  exposed-modules:     System.IO.CodePage
                       System.Win32.CodePage
  build-depends:       base >= 4.3 && < 4.10
  if os(windows)
    cpp-options:       -DWINDOWS
    build-depends:     Win32

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
